comments: fix display of comment actions on mobile

--- a/meinberlin/assets/scss/components_user_facing/adhocracy4/_a4-comments.scss
+++ b/meinberlin/assets/scss/components_user_facing/adhocracy4/_a4-comments.scss
@@ -165,19 +165,14 @@
 }
 
 .a4-comments__action-bar-container {
-    display: inline-flex;
+    display: flex;
     max-width: 100%;
     padding: $em-spacer 0 1.5em 0;
     overflow-x: scroll;
     scrollbar-width: none;
-    align-items: center;
-
-    @media screen and (min-width: $breakpoint-palm) {
-        display: flex;
-        align-items: baseline;
-        justify-content: space-between;
-        margin-left: 0;
-    }
+    justify-content: space-between;
+    width: 100%;
+    align-items: baseline;
 }
 
 .a4-comments__action-bar {
@@ -196,16 +191,8 @@
     .far,
     .fas {
         color: $link-color; // overwrite icons default color
-        display: block;
-        text-align: center;
-        margin-right: 0;
-        margin-bottom: .4em;
-
-        @media screen and (min-width: $breakpoint-palm) {
-            display: inline;
-            text-align: left;
-            margin-bottom: 0;
-        }
+        display: inline;
+        text-align: left;
     }
 }
 
@@ -250,5 +237,12 @@
 
     @media screen and (min-width: $breakpoint-palm) {
         margin-left: $spacer * 5;
+    }
+}
+
+.a4-comments__dropdown__url,
+.a4-comments__dropdown__report {
+    i {
+        display: none;
     }
 }
